// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<App /> Component renders { component: [Function], path: '/' } Component 1`] = `
"<div class=\\"Component\\">
  <div class=\\"FloatingPath\\">/</div>
  <div class=\\"PageContent\\">
    <div data-testid=\\"home\\"></div>
  </div>
  <div data-testid=\\"user-overview\\"></div>
</div>"
`;

exports[`<App /> Component renders { component: [Function], path: '/friends' } Component 1`] = `
"<div class=\\"Component\\">
  <div class=\\"FloatingPath\\">/friends</div>
  <div class=\\"PageContent\\">
    <div data-testid=\\"friends\\"></div>
  </div>
  <div data-testid=\\"user-overview\\"></div>
</div>"
`;

exports[`<App /> Component renders login Component 1`] = `
"<div class=\\"Component\\">
  <div class=\\"FloatingPath\\">/login</div>
  <div data-testid=\\"login\\"></div>
</div>"
`;
